# macai-research

./: .gitignore  README.md  pyproject.toml
data/samples/npys/: 10144268_2024-06-02_2024060214062189_2024060214053964.npy  10203160_2023-10-04_2023100411441625_2023101110031840.npy  10302870_2023-10-17_2023101716092374_2023101716095795.npy
data/samples/pkls/: 10144268_2024-06-02_2024060214062189_2024060214053964.pkl  10203160_2023-10-04_2023100411441625_2023101110031840.pkl  10302870_2023-10-17_2023101716092374_2023101716095795.pkl
data/samples/xmls/: 10144268_2024-06-02_2024060214062189_2024060214053964.xml  10203160_2023-10-04_2023100411441625_2023101110031840.xml  10302870_2023-10-17_2023101716092374_2023101716095795.xml
notebooks/calibration/: TRN-MacAI_v1_2-0822_tmp.ipynb
notebooks/inference/: v.1.2.1-test copy.ipynb  v.1.2.1-test.ipynb
notebooks/train/: TRN-MacAI_v1_2-0822_tmp.ipynb
service/: Dockerfile  main.py
service/sbin/: test_request.sh
src/_dev/: dataset.py
src/inference/: report_plot_class.py
src/macai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/model_architecture/: SynAI.py
src/models/: SynAI.py
src/parsing/: parse_xml.py
src/processing/: dataset.py  infer.py  parser_research.py  transforms.py  utils.py
src/training/: losses.py  train_engine.py
trained_models/v1.2.1/: config.json  config.yaml
trained_models/v1.3.0/: calibration_model-AF.pkl  calibration_model-CIA.pkl  config.yaml  config_.yaml
